Added new files

--- a/FitnessApp/Web.config
+++ b/FitnessApp/Web.config
@@ -29,6 +29,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="twitter" connectionString="data source=NACKADEMIN;initial catalog=twitter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="twitter" connectionString="data source=NACKADEMIN;initial catalog=twitter1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
