--- a/FitnessApp/FitnessApp.csproj
+++ b/FitnessApp/FitnessApp.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.ServiceModel.Activities" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -74,14 +75,17 @@
     <Content Include="Static\m.js" />
     <Content Include="UserControl\BreadCrumb.ascx" />
     <Content Include="UserControl\login.ascx" />
+    <Content Include="UserControl\Register.ascx" />
     <Content Include="Views\Default.aspx" />
     <Content Include="Views\Details.aspx" />
     <Content Include="Views\Login.aspx" />
+    <Content Include="Views\message\message.aspx" />
     <Content Include="Views\my-profile\Profile.aspx" />
     <Content Include="Views\my-profile\Settings.aspx" />
     <Content Include="Views\my-profile\Upload\Upload.aspx" />
-    <Content Include="Views\Register.aspx" />
     <Content Include="Views\SaveInfo.aspx" />
+    <Content Include="Views\Search.aspx" />
+    <Content Include="Views\UserPosts.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -97,7 +101,10 @@
     <Compile Include="MasterPages\Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
     </Compile>
+    <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\DataContext.cs" />
+    <Compile Include="Models\Media.cs" />
+    <Compile Include="Models\Message.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Models\Register.cs" />
     <Compile Include="Models\Upload.cs" />
@@ -116,6 +123,13 @@
     </Compile>
     <Compile Include="UserControl\login.ascx.designer.cs">
       <DependentUpon>login.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="UserControl\Register.ascx.cs">
+      <DependentUpon>Register.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserControl\Register.ascx.designer.cs">
+      <DependentUpon>Register.ascx</DependentUpon>
     </Compile>
     <Compile Include="Views\Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -138,6 +152,13 @@
     <Compile Include="Views\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Views\message\message.aspx.cs">
+      <DependentUpon>message.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\message\message.aspx.designer.cs">
+      <DependentUpon>message.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\my-profile\Profile.aspx.cs">
       <DependentUpon>Profile.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -159,19 +180,26 @@
     <Compile Include="Views\my-profile\Upload\Upload.aspx.designer.cs">
       <DependentUpon>Upload.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Register.aspx.cs">
-      <DependentUpon>Register.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Register.aspx.designer.cs">
-      <DependentUpon>Register.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Views\SaveInfo.aspx.cs">
       <DependentUpon>SaveInfo.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Views\SaveInfo.aspx.designer.cs">
       <DependentUpon>SaveInfo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Search.aspx.cs">
+      <DependentUpon>Search.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Search.aspx.designer.cs">
+      <DependentUpon>Search.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserPosts.aspx.cs">
+      <DependentUpon>UserPosts.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\UserPosts.aspx.designer.cs">
+      <DependentUpon>UserPosts.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
